--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,10 +64,10 @@ nav a {
     margin-right: 10px;
     background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
     background-repeat: no-repeat;
-    background-size: 5% 1.5em;
+    background-size: 5% 50px;
     background-position: left;
     transition: all 0.25s ease-in;
-    font-size: 1.4rem;
+    font-size: 25px;
 }
 
 nav a:hover {
@@ -105,7 +105,7 @@ main {
 }
 
 .info-section {
-    max-width: 88%;
+    max-width: 75%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -145,16 +145,15 @@ main {
     color: var(--secondary);
     min-height: 150px;
     max-height: 150px;
-    flex-basis: calc(50% - 1em);
     display: flex;
     align-items: flex-end;
     padding: 0 0 20px 0;
-    margin: 0.5em;
+    margin: 10px;
     text-decoration: none;
     background-blend-mode: color-burn;
     background-size: 10%;
     transition: all 1.5s;
-    font-size: 0.9rem;
+    font-size: 20px;
 }
 
 /* feature first portfolio item */
@@ -178,7 +177,7 @@ main {
 }
 
 .flex-item h3 {
-    font-size: 1.6rem;
+    font-size: 25px;
     background-color: var(--yellow);
     border-radius: 25%;
 }
@@ -195,14 +194,14 @@ main {
     color: var(--tertiary);
     padding: 5px;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 20px;
     font-style: normal;
     background-image: linear-gradient(270deg, var(--primary) 0%, var (--primary) 100%);
     background-repeat: no-repeat;
-    background-size: 100% 0.2em;
+    background-size: 100% 10px;
     background-position: bottom;
     transition: all 0.25s ease-in;
-    margin: 0 0.2rem 0.1rem;
+    margin: 0 30px 20px;
     display: inline-block;
 }
 
@@ -246,7 +245,7 @@ main {
         width: 100%;
         padding: 5px;
         margin-bottom: 10px;
-        font-size: 10vw;
+        font-size: 12px;
     }
 
     header nav {
@@ -263,7 +262,7 @@ main {
         margin-bottom: 20px;
         padding-bottom: 10px;
         text-align: left;
-        font-size: 7vw;
+        font-size: 12px;
     }
 }
 
